[project]
name = "zopyx.ssl-cert-check"
version = "0.2.0"
description = "A tool to check SSL certificate expiration dates."
authors = [{ name = "Andreas Jung", email = "info@zopyx.com" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "rich",
    "asyncio",
    "aiohttp",
]

[project.scripts]
check-ssl-domains = "zopyx.ssl_cert_check.main:main"

